# tocata-pedal

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TocataPedal-0.2.1.uf2  TocataPedal-0.3.1.uf2  asset-manifest.json  custom_partitions.csv  index.html  platformio.ini
firmware/: .gitignore  CLAUDE.md  CMakeLists.txt  pico_sdk_import.cmake
firmware/.claude/skills/hardware-debug/: SKILL.md
firmware/lib/: CMakeLists.txt  test_u8g2.cpp
firmware/lib/arduino_ethernet/src/: Arduino.h  Ethernet.h  EthernetUdp.h  IPAddress.h
firmware/src/: CMakeLists.txt  Info.plist  controller.cpp  controller.h  main.cpp  midi_sender.h  midi_sysex.h  poll_timer.h
firmware/src/config/: config.cpp  config.h  config_legacy.h  filesystem.cpp  filesystem.h  filesystem_mem.h  flash_partition.cpp  flash_partition.h
firmware/src/display/: display.cpp  display.h  i2c.cpp  spi.cpp  spi.h
firmware/src/ethernet/: eth.cpp  eth.h  wizchip_spi.c  wizchip_spi.h
firmware/src/hal/: application.h  display_sim.h  display_sim_orig.h  display_sim_sh1106.h  display_sim_ssd1322.h  hal.h  hal_host.cpp  hal_host.h  hal_pico.cpp  hal_pico.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware/src/network/: apple_midi.cpp  apple_midi.h  dhcp_client.h  mc_midi.hpp  network.cpp  network.h  udp6.hpp  wizchip_spi.c  wizchip_spi.h  wiznet.hpp  wiznet_registers.hpp  wiznet_spi.hpp
firmware/src/network/registers/: common.hpp  socket.hpp  types.hpp
firmware/src/pio/: expression.cpp  expression.h  leds.cpp  leds.h  switch_matrix.pio  switches.cpp  switches.h  switches.pio  ws2812b.pio
firmware/src/tocata-midi/: CMakeLists.txt  http_client.hpp  main.cpp  mc_midi.hpp  player_connection.hpp  virt_midi.hpp  wing_discovery.hpp  wing_parser.hpp  wing_session.hpp
firmware/src/usb/: config_protocol.cpp  config_protocol.h  midi_usb.cpp  midi_usb.h  usb_device.cpp  usb_device.h  web_usb.cpp  web_usb.h  web_usb_types.h
pico/: CMakeLists.txt
pico/lib/: CMakeLists.txt
pico/src/: CMakeLists.txt  controller.cpp  controller.h  main.cpp
pico/src/config/: config.cpp  config.h  filesystem.cpp  filesystem.h  flash_partition.cpp
pico/src/display/: display.cpp  display.h  i2c.cpp  i2c.h
pico/src/hal/: display_sim.h  hal.h  hal_host.cpp  hal_host.h  hal_pico.h  usb_descriptors.c
pico/src/pio/: leds.h  switch_matrix.pio  switches.cpp  switches.h  ws2812b.pio
pico/src/usb/: device.cpp  midi_usb.cpp  midi_usb.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_device.cpp  usb_device.h  web_usb.cpp  web_usb.h
src/: buttons.h  config.cpp  config.h  controller.cpp  controller.h  display.cpp  display.h  filesystem.cpp  filesystem.h  fsmidi.cpp  fsmidi.h  main.cpp  server.cpp  server.h
static/js/: 2.623c39b2.chunk.js  2.6385a845.chunk.js  2.722daaa4.chunk.js  2.aaeee03f.chunk.js  2.b97160b8.chunk.js  2.c0ee7bc4.chunk.js  2.fd560047.chunk.js  3.2b0b775b.chunk.js  3.40c8e074.chunk.js  3.679eccc4.chunk.js  3.97bf658c.chunk.js  685.9b2893ad.chunk.js  main.168bd2d4.chunk.js  main.365b6fe7.chunk.js  main.479a6161.chunk.js  main.49c36dd0.chunk.js  main.4c2459df.chunk.js  main.57a1ba23.chunk.js  main.703d2754.chunk.js  main.7a34ff8c.chunk.js  main.a73e35a8.chunk.js  main.b5c93c01.chunk.js  main.bdce1aeb.chunk.js  main.e7ce9da0.chunk.js  main.eade96d8.js  runtime-main.1ac893ab.js  runtime-main.2c48fa8b.js  runtime-main.b07299df.js  runtime-main.c049816a.js
web/: .env  .eslintcache  .gitignore  CLAUDE.md  gulpfile.js  package-lock.json  package.json  server.js  server.mjs  sim-package.json  tocata-sim.bat
web/public/: config.json  index.html
web/sim/: Api.mjs  Midi.mjs  Sim.mjs  index.mjs
web/src/: App.js  index.js  setupProxy.js
web/src/api/: Api.mjs  MidiSysEx.mjs  Parsers.mjs  Protocol.mjs  Transport.mjs  TransportMidi.mjs  TransportNodeMidi.mjs  TransportUsb.mjs  TransportWebSocket.mjs  UF2.mjs  cli.mjs  index.mjs  test.mjs
web/src/components/: Actions.js  Api.js  Backup.js  Config.js  Firmware.js  Footswitches.js  Navigation.js  Programs.js
